RESOLVED FIXED 153791
Modern IDB: storage/indexeddb/cursor-continue-validity.html fails
https://bugs.webkit.org/show_bug.cgi?id=153791
Summary Modern IDB: storage/indexeddb/cursor-continue-validity.html fails
Brady Eidson
Reported 2016-02-02 10:40:39 PST
Modern IDB: storage/indexeddb/cursor-continue-validity.html fails It goes through a long series of mutations to an index while iterating the index with an index cursor. In the good case, while on the last cursor record, it updates the object store record such that there should be an additional index record that the cursor should advance to. In the bad case, the update happens but the index cursor doesn't realize there's a new "last record" and claims to be finished.
Attachments
Patch v1 (28.47 KB, patch)
2016-02-02 11:31 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2016-02-02 11:31:12 PST
Created attachment 270499 [details] Patch v1
WebKit Commit Bot
Comment 2 2016-02-02 12:51:56 PST
Comment on attachment 270499 [details] Patch v1 Clearing flags on attachment: 270499 Committed r196025: <http://trac.webkit.org/changeset/196025>
WebKit Commit Bot
Comment 3 2016-02-02 12:52:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.